implemented login, signup & cart

--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "aws-sdk": "^2.663.0",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-fileupload": "^1.1.7-alpha.3",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.7",
     "morgan": "~1.9.1",
