--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "req-flash": "0.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
