--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
     "req-flash": "0.0.3"
