--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "aws-sdk": "^2.663.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.40.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
